--- a/app.css
+++ b/app.css
@@ -19,3 +19,17 @@ svg {
 .axis .tick line {
 	stroke: rgba(0, 0, 0, 0.1);
 }
+
+button {
+        margin: 0 7px 0 0;
+        background-color: #f5f5f5;
+        border: 1px solid #dedede;
+        border-top: 1px solid #eee;
+        border-left: 1px solid #eee;
+        font-size: 12px;
+        line-height: 130%;
+        text-decoration: none;
+        font-weight: bold;
+        color: #565656;
+        cursor: pointer;
+      }
