--- a/app.css
+++ b/app.css
@@ -21,7 +21,7 @@ svg {
 }
 
 button {
-        margin: 7px 7px 7px 7px;
+        margin: 0 10px 0 0;
         background-color: #f5f5f5;
         border: 1px solid #dedede;
         border-top: 1px solid #eee;
