--- a/app.css
+++ b/app.css
@@ -22,7 +22,7 @@ svg {
 
 button {
         margin: 0 0 0 0;
-        background-color: #f5f5f5;
+        background-color: #000000;
         border: 1px solid #dedede;
         border-top: 1px solid #eee;
         border-left: 1px solid #eee;
@@ -30,6 +30,6 @@ button {
         line-height: 130%;
         text-decoration: none;
         font-weight: bold;
-        color: #565656;
+        color: #ffffff;
         cursor: pointer;
       }
