--- a/app.css
+++ b/app.css
@@ -199,3 +199,14 @@ button {
 	  		page-break-inside: avoid;
 	  	}
 	  }
+
+	  .tooltip{ background-color:rgba(68,136,187,0.5);;
+	            margin: 10px;
+	            height: 50px;
+	            width: 150px;
+	            padding-left: 10px; 
+	            padding-top: 10px;
+	      -webkit-border-radius:10px;
+	      -moz-border-radius:10px;
+	      border-radius:10px;
+	          }
