Update format colour size of radius

--- a/app.css
+++ b/app.css
@@ -200,7 +200,7 @@ button {
 	  	}
 	  }
 
-	  .tooltip{ background-color:white;;
+	  .tooltip{ background-color:rgba(68,136,187,0.5);;
 	            margin: 10px;
 	            height: 50px;
 	            width: 150px;
