--- a/app.css
+++ b/app.css
@@ -33,35 +33,13 @@ button {
         cursor: pointer;
       }
 	  
-	  h1,
-	  h2,
-	  h3,
-	  h4,
-	  h5,
-	  h6,
-	  p,
-	  blockquote {
-	      margin: 0;
-	      padding: 0;
-	  }
 	  body {
-	      font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
+	      font-family: "Open Sans";
 	      font-size: 13px;
 	      line-height: 18px;
 	      color: #737373;
 	      background-color: white;
 	      margin: 10px 13px 10px 13px;
-	  }
-	  table {
-	  	margin: 10px 0 15px 0;
-	  	border-collapse: collapse;
-	  }
-	  td,th {	
-	  	border: 1px solid #ddd;
-	  	padding: 3px 10px;
-	  }
-	  th {
-	  	padding: 5px 10px;	
 	  }
 
 	  a {
