--- a/app.css
+++ b/app.css
@@ -33,6 +33,17 @@ button {
         cursor: pointer;
       }
 	  
+	  h1,
+	  h2,
+	  h3,
+	  h4,
+	  h5,
+	  h6,
+	  p,
+	  blockquote {
+	      margin: 0;
+	      padding: 0;
+	  }
 	  body {
 	      font-family: "Open Sans";
 	      font-size: 13px;
@@ -40,6 +51,17 @@ button {
 	      color: #737373;
 	      background-color: white;
 	      margin: 10px 13px 10px 13px;
+	  }
+	  table {
+	  	margin: 10px 0 15px 0;
+	  	border-collapse: collapse;
+	  }
+	  td,th {	
+	  	border: 1px solid #ddd;
+	  	padding: 3px 10px;
+	  }
+	  th {
+	  	padding: 5px 10px;	
 	  }
 
 	  a {
