--- a/app.css
+++ b/app.css
@@ -77,7 +77,40 @@ button {
 	  p {
 	      margin-bottom: 9px;
 	  }
-	 
+	  h1,
+	  h2,
+	  h3,
+	  h4,
+	  h5,
+	  h6 {
+	      color: #404040;
+	      line-height: 36px;
+	  }
+	  h1 {
+	      margin-bottom: 18px;
+	      font-size: 30px;
+	  }
+	  h2 {
+	      font-size: 24px;
+	  }
+	  h3 {
+	      font-size: 18px;
+	  }
+	  h4 {
+	      font-size: 16px;
+	  }
+	  h5 {
+	      font-size: 14px;
+	  }
+	  h6 {
+	      font-size: 13px;
+	  }
+	  hr {
+	      margin: 0 0 19px;
+	      border: 0;
+	      border-bottom: 1px solid #ccc;
+	  }
+	
 
 	  .tooltip{ background-color:rgba(255,255,255,0.8);;
 	            margin: 10px;
