--- a/app.css
+++ b/app.css
@@ -45,7 +45,7 @@ button {
 	      padding: 0;
 	  }
 	  body {
-	      font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
+	      font-family: 'Open Sans';
 	      font-size: 13px;
 	      line-height: 18px;
 	      color: #737373;
